# moo_viewer

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
moo_viewer/: __init__.py  __main__.py  constants.py  data.py  sidebar.py  views.py
moo_viewer/plots/: bars.py  generation.py  pareto.py
