[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "moo-viewer"
version = "0.1.0"
description = "Streamlit dashboard for multi-objective optimisation results"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35",
    "plotly>=5.22",
    "pandas>=2.2",
]

[project.scripts]
moo-viewer = "moo_viewer.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["moo_viewer*"]
